feat(header): add header element.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
     <meta charset="UTF-8" />
     <title>Binary Studio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <div id="root">
 
+        <div class="header">
+            <a href="/" class="header__logo">
+                <img src="assets/logo@3x_optimized.svg" alt="Logo">
+            </a>
+
+            <div class="menu__container">
+                <div class="notification-icon">
+                    <i class="fa fa-bell"></i>
+                </div>
+                <div class="avatar__item-round">
+                    <span>V</span>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="main-layout">
+
+        </div>
+    </div>
 </body>
 
 </html>
