feat(main-layout): add main grid.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,25 @@
         </div>
 
         <div class="main-layout">
+            <div class="container">
+                <div class="cards__container">
+
+                    <div class="cards__item--binary"></div>
+                    <div class="cards__item--qa"></div>
+                    <div class="cards__item--js"></div>
+                    <div class="cards__item--java"></div>
+                    <div class="cards__item--php"></div>
+                    <div class="cards__item--dotnet"></div>
+                    <div class="cards__item--events"></div>
+                    <div class="cards__item--blog"></div>
+                    <div class="cards__item--contacts"></div>
+    
+                </div>
+            </div>
+
+            <div class="footer">
+                <span> © Powered by Binary Studio Team</span>
+            </div>
 
         </div>
     </div>
