feat(grid): add binary card with animation.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>Binary Studio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -31,7 +32,15 @@
             <div class="container">
                 <div class="cards__container">
 
-                    <div class="cards__item--binary"></div>
+                    <div class="cards__item cards__item--binary">
+                        <div class="cards__item-wrapper">
+                            <div class="cards__item-img">
+                                <img src="assets/academy_logo.svg" alt="Logo">
+                            </div>
+                        </div>
+                        <button class="cards_item-btn cards_item-btn--binary">Join</button>
+                    </div>
+
                     <div class="cards__item--qa"></div>
                     <div class="cards__item--js"></div>
                     <div class="cards__item--java"></div>
@@ -40,7 +49,7 @@
                     <div class="cards__item--events"></div>
                     <div class="cards__item--blog"></div>
                     <div class="cards__item--contacts"></div>
-    
+
                 </div>
             </div>
 
