feat(grid): add qa card with animatiob.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
                         <button class="cards_item-btn cards_item-btn--binary">Join</button>
                     </div>
 
-                    <div class="cards__item--qa"></div>
+                    <div class="cards__item cards__item--qa">
+                        <div class="cards__item-wrapper">
+                            <div class="cards__item-label cards__item-label--qa">
+                                QA
+                            </div>
+                        </div>
+                        <div class="cards__item-text cards__item-text--qa">Advanced online course focusing on the finer
+                            points of QA.</div>
+                    </div>
+
                     <div class="cards__item--js"></div>
                     <div class="cards__item--java"></div>
                     <div class="cards__item--php"></div>
