feat(grid): add js card with animation.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
                             points of QA.</div>
                     </div>
 
-                    <div class="cards__item--js"></div>
+                    <div class="cards__item cards__item--js">
+                        <div class="cards__item-wrapper">
+                            <div class="cards__item-label cards__item-label--js">
+                                JS
+                            </div>
+                        </div>
+                        <div class="cards__item-text cards__item-text--js">An online intensive course on building web
+                            applications with JavaScript</div>
+                    </div>
+
                     <div class="cards__item--java"></div>
                     <div class="cards__item--php"></div>
                     <div class="cards__item--dotnet"></div>
