--- a/index.html
+++ b/index.html
@@ -61,7 +61,16 @@
                             applications with JavaScript</div>
                     </div>
 
-                    <div class="cards__item--java"></div>
+                    <div class="cards__item cards__item--java">
+                        <div class="cards__item-wrapper">
+                            <div class="cards__item-label cards__item-label--java">
+                                Java
+                            </div>
+                        </div>
+                        <div class="cards__item-text cards__item-text--java">Advanced online course on building web
+                            applications with Java</div>
+                    </div>
+
                     <div class="cards__item--php"></div>
                     <div class="cards__item--dotnet"></div>
                     <div class="cards__item--events"></div>
