--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
                             applications with Java</div>
                     </div>
 
-                    <div class="cards__item--php"></div>
+                    <div class="cards__item cards__item--php">
+                        <div class="cards__item-wrapper">
+                            <div class="cards__item-label cards__item-label--php">
+                                php
+                            </div>
+                        </div>
+                        <div class="cards__item-text cards__item-text--php">An online intensive course on building web
+                            applications with PHP</div>
+                    </div>
+
                     <div class="cards__item--dotnet"></div>
                     <div class="cards__item--events"></div>
                     <div class="cards__item--blog"></div>
