feat(grid): add dotnet card with animation.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,16 @@
                             applications with PHP</div>
                     </div>
 
-                    <div class="cards__item--dotnet"></div>
+                    <div class="cards__item cards__item--dotnet">
+                        <div class="cards__item-wrapper">
+                            <div class="cards__item-label cards__item-label--dotnet">
+                                .NET
+                            </div>
+                        </div>
+                        <div class="cards__item-text cards__item-text--dotnet">An online intensive course on building web
+                            applications with .NET</div>
+                    </div>
+
                     <div class="cards__item--events"></div>
                     <div class="cards__item--blog"></div>
                     <div class="cards__item--contacts"></div>
