--- a/index.html
+++ b/index.html
@@ -87,11 +87,24 @@
                                 .NET
                             </div>
                         </div>
-                        <div class="cards__item-text cards__item-text--dotnet">An online intensive course on building web
+                        <div class="cards__item-text cards__item-text--dotnet">An online intensive course on building
+                            web
                             applications with .NET</div>
                     </div>
 
-                    <div class="cards__item--events"></div>
+                    <div class="cards__item cards__item--events">
+                        <div class="cards__item-wrapper">
+                            <div class="cards__item-label cards__item-label--events">
+                                Events
+                            </div>
+                        </div>
+                        <div class="cards__item-text cards__item-text--events">У березні-квітні відбулася серія наших
+                            онлайн трансляцій по веб-розробці під кодовою назвою Homeference. Ми на деякий час залишимо
+                            посилання на запис трансляцій нижче. Дивись, шарь з друзями, а щоб не пропустити майбутні
+                            події - підписуйся на <a href="https://t.me/bsacademy">телеграм Binary Studio Academy</a> .
+                        </div>
+                    </div>
+
                     <div class="cards__item--blog"></div>
                     <div class="cards__item--contacts"></div>
 
