feat(grid): add blog card with animation.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,17 @@
                         </div>
                     </div>
 
-                    <div class="cards__item--blog"></div>
+                    <div class="cards__item cards__item--blog">
+                        <div class="cards__item-wrapper">
+                            <div class="cards__item-label cards__item-label--blog">
+                                Blog
+                            </div>
+                        </div>
+                        <div class="cards__item-text cards__item-text--blog">Ділимось інсайтами Академії, досвідом
+                            створення world-class проектів та роздумами про життя, код, роботу.
+                        </div>
+                    </div>
+
                     <div class="cards__item--contacts"></div>
 
                 </div>
