feat(grid): add contacts card with animation.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,22 @@
                         </div>
                     </div>
 
-                    <div class="cards__item--contacts"></div>
+                    <div class="cards__item cards__item--contacts">
+                        <div class="cards__item-wrapper">
+                            <div class="cards__item-label cards__item-label--blog">
+                                Contacts
+                            </div>
+                        </div>
+                        <span class="cards__item-icon">
+                            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                        </span>
+                        <span class="cards__item-icon">
+                            <i class="fa fa-telegram" aria-hidden="true"></i>
+                        </span>
+                        <span class="cards__item-icon">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </span>
+                    </div>
 
                 </div>
             </div>
