feat(header): add menu popup on hover.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div id="root">
 
         <div class="header">
-            <a href="/" class="header__logo">
+            <div class="header__logo">
                 <img src="assets/logo@3x_optimized.svg" alt="Logo">
-            </a>
+            </div>
 
             <div class="menu__container">
                 <div class="notification-icon">
@@ -23,6 +23,11 @@
                 </div>
                 <div class="avatar__item-round">
                     <span>V</span>
+                    <div class="menu-popup">
+                        <div class="menu-popup__label">Viktoriia Kozopas</div>
+                        <div class="menu-popup__item">Profile</div>
+                        <div class="menu-popup__item">Log Out</div>
+                    </div>
                 </div>
             </div>
 
