feat(alert): add alert messages.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,54 @@
 
         </div>
     </div>
+    <div class="alert-message">
+        <div class="alert-message__container">
+
+            <div class="alert-message__item alert-message__item--error">
+                <div class="alert-message__item-icon">
+                    <i class="fa fa-exclamation-circle"></i>
+                </div>
+                <div>
+                    <div class="alert-message__item-header">
+                        Error
+                    </div>
+                    <div class="alert-message__item-text">
+                        Something went wrong. Please try again later.
+                    </div>
+                </div>
+            </div>
+
+            <div class="alert-message__item alert-message__item--success">
+                <div class="alert-message__item-icon">
+                    <i class="fa fa-check-circle"></i>
+                </div>
+                <div>
+                    <div class="alert-message__item-header">
+                        Success
+                    </div>
+                    <div class="alert-message__item-text">
+                        Profile was updated.
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="alert-message__item alert-message__item--warning">
+                <div class="alert-message__item-icon">
+                    <i class="fa fa-check-circle"></i>
+                </div>
+                <div>
+                    <div class="alert-message__item-header">
+                        Warning
+                    </div>
+                    <div class="alert-message__item-text">
+                        Deadline is comming.
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
