fix(header): fix menu popup position.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
           <div class="notification-icon">
             <i class="fa fa-bell"></i>
           </div>
-          <div class="avatar__item-round">
-            <span>V</span>
-            <div class="menu-popup">
-              <div class="menu-popup__label">Viktoriia Kozopas</div>
-              <div class="menu-popup__item">Profile</div>
-              <div class="menu-popup__item">Log Out</div>
+          <div class="avatar__item-wrapper">
+            <div class="avatar__item-round">
+              <span>V</span>
+              <div class="menu-popup">
+                <div class="menu-popup__label">Viktoriia Kozopas</div>
+                <div class="menu-popup__item">Profile</div>
+                <div class="menu-popup__item">Log Out</div>
+              </div>
             </div>
           </div>
         </div>
